--- a/src/app/main-content/my-projects/my-projects.scss
+++ b/src/app/main-content/my-projects/my-projects.scss
@@ -1,6 +1,6 @@
 span {
     color: var(--color-white);
-    font-size: calc(2rem - clamp(0.875rem, 1.1964rem + -0.3571vw, 1.125rem));
+    font-size: calc(2.125rem - clamp(1rem, 1.1607rem + -0.1786vw, 1.125rem));
 }
 
 .projects {
@@ -88,12 +88,16 @@ span {
         div {
             gap: calc(3.75rem - clamp(1.75rem, 2.8088rem + -1.1765vw, 2rem));
             display: flex;
+            flex-wrap: wrap;
 
-            //remove for mobile, replace with text
             img {
                 height: 36px;
                 margin-top: 12px;
             }
+        }
+
+        .technology {
+            padding-left: 2px;
         }
     }
 
