--- a/src/app/shared/components/footer/footer.scss
+++ b/src/app/shared/components/footer/footer.scss
@@ -86,7 +86,7 @@ footer {
 
         a,
         p {
-            font-size: 14px;
+            font-size: 16px;
             text-align: center;
         }
     }
